--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,9 +3,6 @@
         <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail *ngIf="recipeSelected; else infoText" [recipe]="recipeSelected"></app-recipe-detail>
-        <ng-template #infoText>
-            No recipe selected!
-        </ng-template>
+        <router-outlet></router-outlet>
     </div>
 </div>
