--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,10 +9,10 @@
                 <li routerLinkActive="active"><a routerLink="/shoppingList">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li routerLinkActive="active" *ngIf="!authService.isAuthenticated()"><a routerLink="/signup">Sign up</a></li>
-                <li routerLinkActive="active" *ngIf="!authService.isAuthenticated()"><a routerLink="/signin">Sign in</a></li>
-                <li routerLinkActive="active" *ngIf="authService.isAuthenticated()" style="cursor: pointer"><a (click)="onLogout()">Sign out</a></li>
-                <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
+                <li routerLinkActive="active" *ngIf="!isAuthenticated()"><a routerLink="/signup">Sign up</a></li>
+                <li routerLinkActive="active" *ngIf="!isAuthenticated()"><a routerLink="/signin">Sign in</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated()" style="cursor: pointer"><a (click)="onLogout()">Sign out</a></li>
+                <li class="dropdown" appDropdown *ngIf="isAuthenticated()">
                     <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
