--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,17 +1,21 @@
 <div class="row">
   <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <form (ngSubmit)="onSignin(f)" #f="ngForm">
       <div class="form-group">
         <label for="email">Mail</label>
-        <input type="email" name="email" id="email" class="form-control" ngModel>
+        <input type="email" id="email" name="email" ngModel class="form-control">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="form-control" minlength="6" ngModel>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          ngModel
+          class="form-control">
       </div>
-      <div class="form-group">
-        <input type="submit" value="Submit" class="btn btn-primary" [disabled]="!f.valid">
-      </div>
+      <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign In</button>
     </form>
   </div>
 </div>
+
